# qr

./: .gitignore  .qr_distributed.h.swp  CMakeLists.txt  README  arrayTest.cpp  array_test.cpp  boost_test  boost_test.cpp  communicators.h  hessenberg_distributed.h  io.h  matrix_operations.h  matrixops.h  mmio.c  mmio.h  qr_algorithm.h  qr_algorithm_distributed.h  qr_algorithm_serial.h  qr_distributed.cpp  qr_distributed.h  qr_serial.cpp  qr_serial.h  run_qr.moab  util.h
data/: test_matrix.csv  test_matrix1.csv  test_matrix2.csv  test_matrix3.csv
distributed/: CMakeLists.txt  communicators.h  hessenberg.cpp  hessenberg_distributed.h  qr_distributed.cpp  qr_distributed.h
io/: io.h  util.h
serial/: CMakeLists.txt  qr_serial.cpp  qr_serial.h
